--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@types/vue": "^2.0.0",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-typescript": "^4.0.0",
@@ -24,6 +25,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
+    "ts-loader": "^6.2.1",
     "typescript": "~3.5.3",
     "vue-template-compiler": "^2.6.10"
   }
