--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "a-grid",
+  "name": "@hzimm/a-grid",
   "version": "0.1.0",
   "private": true,
+  "main": "./dist/@hzimm/a-grid.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "bundle": "vue-cli-service build --target lib --name a-grid ./src/components/index.js"
   },
   "dependencies": {
     "core-js": "^3.3.2",
