--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hzimm/a-grid",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "main": "./dist/@hzimm/a-grid.common.js",
   "files": [
     "dist/*",
@@ -13,7 +13,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "bundle": "vue-cli-service build --target lib --name a-grid ./src/components/index.js"
+    "bundle": "vue-cli-service build --target lib --name @hzimm/a-grid ./src/components/index.js"
   },
   "dependencies": {
     "core-js": "^3.3.2",
